Don't show drafts and futures.

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ twitter_username: AndrewOrru
 github_username:  AndreaOrru
 
 # Build settings
+future: false
+show_drafts: false
 markdown: kramdown
 theme: minima
 gems:
