--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: andreaorru1991@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Wanderluster and computer programmer. Planning to take over the world in my spare time.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://andreaorru.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://andreaorru.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: AndrewOrru
 github_username:  AndreaOrru
 
